New in CSSC-0.14alpha-pl0

	* Added Richard Kettlewell's sccs.cgi CGI script.

	* Fixes for set-user-id operation (which is still not
          recommended - see the CSSC manual for an explanation).

New in CSSC-0.13alpha-pl1

	* get -e should re-use deltas that have been removed 
	  (SF bug ID 450900, new test case tests/get/removed-delta.sh)

	* Fixed Debian GNU/Linux bug #120080 (that sccs sccsdiff fails to 
          work if the /usr/sccs symbolic link is missing and the 
          libexecfir is not on the caller's $PATH).

	* Test suite now passes if run against Solaris 2.6 (this is the 
          pnly Unix system to which the author has convenient access 
	  at home).

	* admin -fl2 now deletes any other existing locks (this is a 
          Solaris 2.6 compatibility fix; please report a bug if this
          breaks compatibility with something else).
	
	* If final item in the prs format string is \n (the 
	  escape code for newline as opposed to newline) then
	  prs does not emit that newline (for compatibility with 	
	  Solaris 2.6 - if this is different on other Unix systems,
	  please report this as a bug).

	* Small changes to prt output format (reserved usr list header
          and extra spaces at beginning and end of line).

New in CSSC-0.13alpha-pl0

	* CSSC should now build with GCC version 3.

	* Preliminary support for CYGWIN

	* It is now possible to turn binary file support off when 
	  running "configure", to enforce compatibility with an 
	  SCCS implementation which lacks binary file support.  It is 
	  also possible to indicate a maximum allowable line length as 
	  well.  These settings can be overridden by the use of 
	  environment variables.  For more information, see the
	  "Interoperability" and "Environment" chapters in the CSSC 
	  manual.

	* It is also now possible to have concurrent edits (i.e. the
	  "j" flag now actually works instead of causing a coredump).
	  (This was SourceForge bug #439146).

New in CSSC-0.12alpha-pl0
