@@ -5,7 +5,8 @@ export prt
 remove s.testfile2
 ../../testutils/uu_decode --decode < s.testfile2.uue || miscarry could not uudecode testfile2.uue.
 
-sh all-variations.txt >got.stdout
+sh all-variations.txt 2>&1 >got.stdout | 
+    grep -v "feature not fully tested: excluded delta"
 
 remove all.expected
 
